# waffentrager

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yaml  compose.yml  config.yaml  pyproject.toml
waffentrager/: __init__.py  event.py  event_extraction_chain.py  telegram_bot.py
waffentrager/storage/: __init__.py  mongo.py
