[tool.poetry]
name = "waffentrager"
version = "0.1.0"
description = "A task aggregation application for the most lazy ones."
authors = ["Sergey Kirichenko <whole-white-whale@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
pydantic = "^2.9.2"
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
