[tool.poetry]
name = "waffentrager"
version = "0.1.0"
description = "A task aggregation application for the most lazy ones."
authors = ["Sergey Kirichenko <whole-white-whale@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
aiogram = "^3.13.1"
confuse = "^2.0.1"
langchain-core = "^0.3.8"
langchain-ollama = "^0.2.0"
pydantic = "^2.9.2"
pymongo = "^4.10.1"
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
